<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/login_bk"

    app:cardCornerRadius="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageviewuser"

        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="-150dp"
        android:src="@drawable/user"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/oneuserinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="USER"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/username_"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oneuserusername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/amitthecoder"
                    android:textColor="#6E6C6C"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="First name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oneuserfirstname"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/male"
                    android:textColor="#6E6C6C"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="last name"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oneuserlastname"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/_21"
                    android:textColor="#6E6C6C"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oneuserbirthday"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/_07_02_2003"
                    android:textColor="#6E6C6C"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="email"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oneuseremail"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/_91_9000000009"
                    android:textColor="#6E6C6C"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="adress"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oneuseradress"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/axxxxxxa_gmail_com"
                    android:textColor="#6E6C6C"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/editimagebuttonforoneuser"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_marginTop="100px"

                    android:background="@drawable/edit"

                    android:text="Select Image" />

                <Button
                    android:id="@+id/deleteimagebutton"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_marginLeft="650px"
                    android:layout_marginTop="100px"
                    android:background="@drawable/delete"

                    android:text="Select Image" />


            </RelativeLayout>


        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>
</androidx.cardview.widget.CardView>